tests/samples/var-bad-syntax.err
var-bad-syntax.flow:2:Syntax error. " do\n  var *3 = other_".
