tests/samples/var-bad-syntax.flow
flow onboarding do
  var 3 = other_variable
done
